--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "mongoose": "^8.2.1",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -18,6 +20,7 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
