--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "mongoose": "^8.2.1",
@@ -17,7 +18,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
