--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^8.2.1",
     "next": "^14.1.3",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
