--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@headlessui/react": "^1.7.18",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.2",
     "mongoose": "^8.2.1",
     "next": "^14.1.3",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.3.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
