--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@react-three/drei": "^9.102.3",
+    "@react-three/fiber": "^8.15.19",
+    "@types/three": "^0.162.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.2",
@@ -23,7 +26,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
